// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`type declarations formats a primitive type alias 1`] = `
"module Example {
  type Count = int
}
"
`;

exports[`type declarations formats an uninterpreted type 1`] = `
"module Example {
  type DOMAIN
}
"
`;

exports[`type declarations formats a named type alias 1`] = `
"module Example {
  type DOMAIN

  type Copy = DOMAIN
}
"
`;

exports[`type declarations formats a polymorphic type alias 1`] = `
"module Example {
  type Box[a] = List[a]
}
"
`;

exports[`type declarations preserves a function type alias continuation 1`] = `
"module Example {
  type Listener[p] =
      (List[p]) => Set[p]
}
"
`;

exports[`type declarations formats a polymorphic type application 1`] = `
"module Example {
  type Box[a] = List[a]

  const boxes: Box[int]
}
"
`;

exports[`type declarations preserves an expanded type application 1`] = `
"module Example {
  type Applied[a, b, c, d, e] = (a, b, c, d, e)

  type GlobalContext = Applied[
    int,
    bool,
    str,
    int,
    bool
  ]
}
"
`;

exports[`type declarations formats an inline sum type 1`] = `
"module Example {
  type Elem = S(str) | I(int)
}
"
`;

exports[`type declarations formats a multiline sum type 1`] = `
"module Example {
  type Option[a] =
    | Some(a)
    | None
}
"
`;

exports[`type declarations preserves comments between sum-type variants 1`] = `
"module Example {
  type Step =
    | First
    // Preserve this variant comment.
    | Second
}
"
`;

exports[`type declarations preserves trailing comments on sum-type variants 1`] = `
"module Example {
  type LastDraw =
    | Self(str) // The name of someone who drew themself
    | Ok        // The draw was Ok
}
"
`;

exports[`type declarations preserves a function type alias continuation 2`] = `
[
  {
    "column": 1,
    "filePath": "input.qnt",
    "length": 4,
    "line": 3,
    "message": "expected a four-space continuation indent",
    "rule": "format/definition-body-indentation",
    "sourceLine": "    (List[p]) => Set[p]",
  },
]
`;
